--- a/.github/workflows/hello-world-docker-ci.yml
+++ b/.github/workflows/hello-world-docker-ci.yml
@@ -4,7 +4,7 @@ on:
     branches: 
     - main
     paths: 
-    - hello-world-docker-action/**
+    - /**
   workflow_dispatch:
 
 jobs:
@@ -12,13 +12,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3.3.0
+        uses: actions/checkout@v4.1.1
 
       - name: Run my own container action
         id: hello-action
-        uses: ./hello-world-docker-action
+        uses: ./
         with:
           who-to-greet: '@you'
+          time: date()
 
       - name: Output time set in the container
         run: echo "The time was ${{ steps.hello-action.outputs.time }} when the action said hello"
